--- a/README
+++ b/README
@@ -1,2 +1,2 @@
-This file contains an R script for data analysis and visualization purposes in research entitled 
+This file contains an R script using SVM for classification Range of Groundwater Nitrate Concentration, confusion matrix, variable importance and its visualization purposes in research entitled 
 "Integrating SVM-IDW Modeling for Assessing Human Health Risks from Groundwater Nitrate in Urban Depok, Indonesia"
